--- a/package.json
+++ b/package.json
@@ -4,11 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel ./src/index.js --out-file ./dist/reactSagaHandler.js",
+    "watch": "babel ./src/index.js --watch --out-file ./dist/reactSagaHandler.js",
+    "build-test": "./node_modules/.bin/webpack",
+    "build-test-watch": "./node_modules/.bin/webpack -w"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/octav47/redux-saga-handler.git"
+  },
+  "dependencies": {
+    "babel-loader": "^7.1.1",
+    "redux-saga": "^0.16.0"
+  },
+  "devDependencies": {
+    "babel-cli": "6.24.1",
+    "babel-core": "6.25.0",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-env": "1.6.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "isomorphic-fetch": "^2.2.1",
+    "redux": "^3.7.2",
+    "webpack": "^3.1.0"
   },
   "author": "",
   "license": "ISC",
