--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel ./src/index.js --out-file ./dist/reactSagaHandler.js",
-    "watch": "babel ./src/index.js --watch --out-file ./dist/reactSagaHandler.js",
+    "build": "babel ./src/index.js --out-file ./dist/reduxSagaHandler.js",
+    "watch": "babel ./src/index.js --watch --out-file ./dist/reduxSagaHandler.js",
     "build-test": "./node_modules/.bin/webpack",
     "build-test-watch": "./node_modules/.bin/webpack -w"
   },
@@ -21,6 +21,7 @@
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
