--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel ./src/index.js --out-file ./dist/reduxSagaHandler.js",
-    "watch": "babel ./src/index.js --watch --out-file ./dist/reduxSagaHandler.js",
-    "build-test": "./node_modules/.bin/webpack",
-    "build-test-watch": "./node_modules/.bin/webpack -w"
+    "build": "./node_modules/.bin/webpack --config webpack.main.config.js",
+    "watch": "./node_modules/.bin/webpack --config webpack.main.config.js --watch",
+    "build-test": "./node_modules/.bin/webpack --config webpack.tests.config.js",
+    "build-test-watch": "./node_modules/.bin/webpack --config webpack.tests.config.js --watch"
   },
   "repository": {
     "type": "git",
@@ -15,13 +15,15 @@
   },
   "dependencies": {
     "babel-loader": "^7.1.1",
+    "babel-polyfill": "^6.26.0",
     "redux-saga": "^0.16.0"
   },
   "devDependencies": {
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
+    "babel-plugin-object-rest-spread": "0.0.0",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
     "babel-plugin-transform-runtime": "6.23.0",
-    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "1.6.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
